#14659   ContentletTransformer  centralized transformation and hydrate logic